--- a/Logowanie/pom.xml
+++ b/Logowanie/pom.xml
@@ -8,10 +8,10 @@
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
-		<java-version>1.6</java-version>
-		<org.springframework-version>3.1.1.RELEASE</org.springframework-version>
-		<org.aspectj-version>1.6.10</org.aspectj-version>
-		<org.slf4j-version>1.6.6</org.slf4j-version>
+		<java-version>1.8</java-version>
+		<org.springframework-version>4.3.0.RELEASE</org.springframework-version>
+		<org.aspectj-version>1.8.9</org.aspectj-version>
+		<org.slf4j-version>1.7.21</org.slf4j-version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -33,6 +33,12 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 				
+	    <dependency>
+        	<groupId>org.springframework</groupId>
+        	<artifactId>spring-jdbc</artifactId>
+        	<version>${org.springframework-version}</version>
+    	</dependency>
+    
 		<!-- AspectJ -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
