--- a/Logowanie/pom.xml
+++ b/Logowanie/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>logowanie</artifactId>
 	<name>Logowanie</name>
 	<packaging>war</packaging>
-	<version>1.0.0-BUILD-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<properties>
 		<java-version>1.8</java-version>
 		<org.springframework-version>4.2.5.RELEASE</org.springframework-version>
