--- a/Logowanie/src/main/webapp/WEB-INF/web.xml
+++ b/Logowanie/src/main/webapp/WEB-INF/web.xml
@@ -16,18 +16,35 @@
 
 	<!-- Processes application requests -->
 	<servlet>
-		<servlet-name>appServlet</servlet-name>
+		<servlet-name>restServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			<param-value>/WEB-INF/spring/appServlet/servlet-rest-context.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-		
+	
 	<servlet-mapping>
-		<servlet-name>appServlet</servlet-name>
+		<servlet-name>restServlet</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
+		
+	<servlet>
+		<servlet-name>webServlet</servlet-name>
+      	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/servlet-webpage-context.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+   </servlet>
+   
+	<servlet-mapping>
+		<servlet-name>webServlet</servlet-name>
+		<url-pattern>*.jsp</url-pattern>
+	</servlet-mapping>
+
+
 
 </web-app>
